--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             }
 
             else{
-                event.target.textContent = 'Added';
+                event.target.textContent = 'Add to Favorites';
                 isFavorited = !isFavorited;
             }
         }
